force-app/main/default/objects/Account/fields/CustomField__c.field-meta.xml
<CustomField>
    <fullName>CustomField__c</fullName>
    <label>CustomField22</label>
    <length>255</length>
    <type>Text</type>
</CustomField>