force-app/main/default/objects/Account/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Can be used to distinguish between records to be considered for current business and reportings and records that should not. Plays together with concept of Status</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>