force-app/main/default/objects/Account/fields/IsVIP__c.field-meta.xml
<CustomField>
  <fullName>IsVIP__c</fullName>
  <defaultValue>false</defaultValue>
  <description>VIP Accounts have special SLAs</description>
  <label>VIP</label>
  <type>Checkbox</type>
</CustomField>