force-app/main/default/objects/Account/fields/RecordSource__c.field-meta.xml
<CustomField>
    <fullName>RecordSource__c</fullName>
    <description>Reference to the original record source before migration to salesforce</description>
    <label>Record Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>