force-app/main/default/objects/Account/fields/RecordSourceDateTime__c.field-meta.xml
<CustomField>
    <fullName>RecordSourceDateTime__c</fullName>
    <description>Original record reference date before migration</description>
    <label>Record Source Date</label>
    <type>DateTime</type>
</CustomField>