force-app/main/default/objects/Account/fields/SetByFlowOnInsert__c.field-meta.xml
<CustomField>
    <fullName>SetByFlowOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be updated by a flow</description>
    <inlineHelpText>Will be updated by a flow</inlineHelpText>
    <label>SetByFlowOnInsert</label>
    <type>Checkbox</type>
</CustomField>