force-app/main/default/objects/Account/listViews/AllAccountsDE.listView-meta.xml
<ListView>
    <fullName>AllAccountsDE</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Accounts</label>
    <sharedTo>
        <group>LanguageProfileGerman</group>
    </sharedTo>
</ListView>