force-app/main/default/objects/Account/listViews/AllAccountsEN.listView-meta.xml
<ListView>
    <fullName>AllAccountsEN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <sharedTo>
        <group>LanguageProfileEnglish</group>
    </sharedTo>
</ListView>