force-app/main/default/objects/Account/listViews/MyAccountsDE.listView-meta.xml
<ListView>
    <fullName>MyAccountsDE</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Meine Accounts</label>
    <sharedTo>
        <group>LanguageProfileGerman</group>
    </sharedTo>
</ListView>