force-app/main/default/objects/Account/listViews/MyAccountsEN.listView-meta.xml
<ListView>
    <fullName>MyAccountsEN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
    <sharedTo>
        <group>LanguageProfileEnglish</group>
    </sharedTo>
</ListView>