force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Account Hierarchy</label>
</ListView>